--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,6 +1,3 @@
-
-
-
 //
 // Colors
 //
@@ -43,6 +40,7 @@ $res1200: "only screen and (max-width : 1200px)";
 $info-tablet-horizontal: "only screen and (max-width : 1160px)";
 $res1140: "only screen and (max-width : 1140px)";
 $res974: "only screen and (max-width : 974px)";
+$res1000: "only screen and (max-width : 1000px)";
 $info-tablet-vertical: "only screen and (max-width : 900px)";
 $info-phone: "only screen and (max-width : 767px)";
 $res740to1110: "(min-width : 740px) and (max-width : 1110px)";
