--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9117,6 +9117,333 @@ table {
   max-height: 149px;
 }
 
+.work {
+  display: block;
+}
+
+@media only screen and (max-width: 767px) {
+  .work {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 20px;
+  }
+}
+
+.work .col-sm-3 {
+  padding: 0;
+  margin: 0;
+}
+
+.work .work__content {
+  position: relative;
+  text-align: center;
+}
+
+.work .work__content:hover .work__text {
+  display: block;
+}
+
+.work .work__content .work__img {
+  position: relative;
+  z-index: 1;
+  margin: -1.1px;
+}
+
+@media only screen and (max-width: 767px) {
+  .work .work__content .work__img img {
+    margin: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.work .work__content .work__text {
+  position: absolute;
+  left: 20%;
+  top: 40%;
+  z-index: 1;
+  color: #fff;
+  display: none;
+  cursor: default;
+}
+
+@media only screen and (max-width: 1200px) {
+  .work .work__content .work__text {
+    left: 15%;
+    top: 40%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .work .work__content .work__text {
+    left: 12%;
+  }
+}
+
+.work .work__content .work__text i {
+  font-size: 20px;
+}
+
+.work .work__content .work__text p {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .work .work__content .work__text p {
+    font-size: 12px;
+  }
+}
+
+.work .work__content .work__text span {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  font-size: 15px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .work .work__content .work__text span {
+    font-size: 12px;
+  }
+}
+
+.work .work__content .img-01:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 22;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(228, 126, 125, 0.92)), to(rgba(236, 211, 133, 0.92)));
+  background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
+}
+
+.work .work__content .img-02:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 22;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(228, 126, 125, 0.92)), to(rgba(236, 211, 133, 0.92)));
+  background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
+}
+
+.work .work__content .img-03:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 22;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(228, 126, 125, 0.92)), to(rgba(236, 211, 133, 0.92)));
+  background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
+}
+
+.work .work__content .img-04:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(228, 126, 125, 0.92)), to(rgba(236, 211, 133, 0.92)));
+  background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
+}
+
+.work .work__content .img-05:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(228, 126, 125, 0.92)), to(rgba(236, 211, 133, 0.92)));
+  background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
+}
+
+.work .work__content .img-06:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(228, 126, 125, 0.92)), to(rgba(236, 211, 133, 0.92)));
+  background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
+}
+
+.work .work__content .img-07:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  opacity: 0.9;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(228, 126, 125, 0.92)), to(rgba(236, 211, 133, 0.92)));
+  background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
+}
+
+.feed-back-01 .feed-back__content {
+  max-width: 1200px;
+  margin: auto;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+
+@media only screen and (max-width: 1200px) {
+  .feed-back-01 .feed-back__content {
+    max-width: 1200px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .feed-back-01 .feed-back__content {
+    max-width: 1200px;
+  }
+}
+
+.feed-back-01 .feed-back__content .content-img {
+  max-width: 80%;
+  width: 80%;
+}
+
+.feed-back-01 .feed-back__content .content-text {
+  padding: 30px 0 0 0;
+}
+
+@media only screen and (max-width: 1200px) {
+  .feed-back-01 .feed-back__content .content-text {
+    padding: 0;
+    margin: 0 0 0 20px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .feed-back-01 .feed-back__content .content-text {
+    margin-left: 10px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .feed-back-01 .feed-back__content .content-text {
+    margin-left: 10px;
+  }
+}
+
+.feed-back-01 .feed-back__content .content-text p {
+  font-family: myriad-pro, sans-serif;
+  font-size: 22px;
+  margin: 5px 0 20px 0;
+  color: #9c9a9a;
+}
+
+@media only screen and (max-width: 800px) {
+  .feed-back-01 .feed-back__content .content-text p {
+    font-size: 15px;
+    margin: 5px 0 10px 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .feed-back-01 .feed-back__content .content-text p {
+    font-size: 12px;
+    margin: 0;
+  }
+}
+
+.feed-back-01 .feed-back__content .content-text span {
+  font-family: 'Kaushan Script', cursive;
+  font-size: 22px;
+  position: relative;
+  margin-left: 70px;
+}
+
+.feed-back-01 .feed-back__content .content-text span::after {
+  content: "";
+  position: absolute;
+  width: 60px;
+  height: 5px;
+  border-bottom: 3.5px solid #f38181;
+  left: -55%;
+  top: 50%;
+}
+
+@media only screen and (max-width: 800px) {
+  .feed-back-01 .feed-back__content .content-text span::after {
+    width: 50px;
+    left: -70%;
+    top: 50%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .feed-back-01 .feed-back__content .content-text span::after {
+    border-bottom: 2px solid #f38181;
+    width: 30px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .feed-back-01 .feed-back__content .content-text span {
+    font-size: 17px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .feed-back-01 .feed-back__content .content-text span {
+    font-size: 12px;
+    margin-left: 35px;
+  }
+}
+
+.feed-back-01 .slider {
+  width: 80%;
+  margin: 100px auto;
+}
+
+.feed-back-01 .slick-slide {
+  margin: 0px 20px;
+}
+
+.feed-back-01 .slick-prev:before,
+.feed-back-01 .slick-next:before {
+  color: black;
+}
+
+.feed-back-01 .slick-slide {
+  -webkit-transition: all ease-in-out .3s;
+  transition: all ease-in-out .3s;
+  opacity: .2;
+}
+
+.feed-back-01 .slick-active {
+  opacity: .5;
+}
+
+.feed-back-01 .slick-current {
+  opacity: 1;
+}
+
 .footer {
   font-family: 'Montserrat', sans-serif;
 }
