--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -19,6 +19,7 @@
                 height: 200px;
                 width: 100%;
                 display: block;
+                background-size: cover;
                 color: #ee7676;
                 .footer__map--icon {
                     font-size: 20px;
