--- a/assets/scss/layout/_service.scss
+++ b/assets/scss/layout/_service.scss
@@ -1,5 +1,5 @@
 .service {
-    margin: auto;
+    margin: 110px auto;
     max-width: 1200px;
     .service__content {
         text-align: center;
