--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -50,6 +50,7 @@
  $res1350: "only screen and (max-width : 1350px)";
  $res1550: "only screen and (max-width : 1550px)";
  $res1024: "only screen and (max-width : 1024px)";
+ $res964: "only screen and (max-width : 964px)";
  $res950: "only screen and (max-width : 950px)";
  $res700: "only screen and (max-width : 700px)";
  $res645: "only screen and (max-width : 645px)";
