--- a/assets/scss/layout/_work.scss
+++ b/assets/scss/layout/_work.scss
@@ -10,6 +10,10 @@
         .work {
             display: flex;
             flex-wrap: wrap;
+            @media #{$res964} {
+                margin: auto;
+                justify-content: center;
+            }
             @media #{$info-phone} {
                 display: flex;
                 margin: 0 20px;
