--- a/assets/scss/layout/_blog.scss
+++ b/assets/scss/layout/_blog.scss
@@ -1,5 +1,8 @@
 .blog {
     margin: 60px 0 40px 0;
+    @media #{$res800} {
+        margin: 35px 0;
+    }
     .blog__content {
         max-width: 1200px;
         display: flex;
@@ -36,12 +39,12 @@
                     @media #{$info-tablet-horizontal} {
                         width: 50px;
                         height: 60px;
-                        padding: 7px 0;
+                        padding: 10px 0;
                     }
                     @media #{$info-tablet-vertical} {
                         width: 40px;
                         height: 50px;
-                        padding: 5px 0;
+                        padding: 10px 0;
                     }
                     span {
                         font-family: 'Montserrat', sans-serif;
