--- a/assets/scss/layout/_design.scss
+++ b/assets/scss/layout/_design.scss
@@ -4,6 +4,9 @@
     padding: 40px 0 0 0;
     background-repeat: no-repeat;
     background-size: cover;
+    @media #{$res800} {
+        margin: 35px 0;
+    }
     .title-section {
         padding: 40px 0 45px 0;
     }
