--- a/assets/scss/layout/_work.scss
+++ b/assets/scss/layout/_work.scss
@@ -10,6 +10,9 @@
         .work {
             display: flex;
             flex-wrap: wrap;
+            max-width: 1700px;
+            margin: auto;
+            justify-content: center;
             @media #{$res964} {
                 margin: auto;
                 justify-content: center;
@@ -29,19 +32,25 @@
                 position: relative;
                 text-align: center;
                 .img-05 {
-                    img {}
-                }
-                .img-01,
-                .img-02,
-                .img-03,
-                .img-04,
-                .img-06,
-                .img-07 {
+                    // min-height: 616px;
+                    // max-width: 385px;
+                    // max-height: 616px;
+                    // background-image: url("/assets/img/work5.png");
+                    // background-size: 385px 616px;
+                    // margin-left: -2px;
                     img {
-                        // width: 380px;
-                        // width: 310px;
+                        // max-height: ;
                     }
                 }
+                .img-02,
+                .img-04,
+                .img-07 {
+                    margin-top: -3px;
+                }
+                .img-03,
+                .img-04 {}
+                .img-07,
+                .img-06 {}
                 .work__img {
                     position: relative;
                     z-index: 1;
@@ -61,19 +70,13 @@
                 }
                 .work__text {
                     position: absolute;
-                    left: 28%;
-                    top: 42%;
+                    left: 0;
+                    top: 44%;
                     z-index: 1;
                     color: #fff;
                     display: none;
                     cursor: default;
-                    @media #{$res1200} {
-                        left: 15%;
-                        top: 40%;
-                    }
-                    @media #{$res1000} {
-                        left: 12%;
-                    }
+                    width: 100%;
                     @media #{$info-phone} {}
                     i {
                         font-size: 20px;
@@ -101,7 +104,7 @@
                         &::after {
                             content: "";
                             position: absolute;
-                            width: 100%;
+                            width: 100;
                             height: 100%;
                             z-index: 22;
                             top: 0;
