refactor : xoá comment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9280,7 +9280,7 @@ table {
 .container-fluid .work .work__content .img-01:hover::after {
   content: "";
   position: absolute;
-  width: 100;
+  width: 100%;
   height: 100%;
   z-index: 22;
   top: 0;
