--- a/assets/scss/layout/_work.scss
+++ b/assets/scss/layout/_work.scss
@@ -31,26 +31,11 @@
                 }
                 position: relative;
                 text-align: center;
-                .img-05 {
-                    // min-height: 616px;
-                    // max-width: 385px;
-                    // max-height: 616px;
-                    // background-image: url("/assets/img/work5.png");
-                    // background-size: 385px 616px;
-                    // margin-left: -2px;
-                    img {
-                        // max-height: ;
-                    }
-                }
                 .img-02,
                 .img-04,
                 .img-07 {
                     margin-top: -3px;
                 }
-                .img-03,
-                .img-04 {}
-                .img-07,
-                .img-06 {}
                 .work__img {
                     position: relative;
                     z-index: 1;
@@ -104,7 +89,7 @@
                         &::after {
                             content: "";
                             position: absolute;
-                            width: 100;
+                            width: 100%;
                             height: 100%;
                             z-index: 22;
                             top: 0;
